css/style.css
@import url('https://fonts.googleapis.com/css2?family=Buda:wght@300&family=Charis+SIL:ital,wght@0,400;0,700;1,400;1,700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Style+Script&display=swap');

:root{
    font-family: "Inter", "Charis SIL", sans-serif;
}

html, body {
    width: 100%;
    padding: 0;
    margin: 0;
    cursor: default;
    user-select: none;
}

h1{
    font-weight: 300;
}

h2{
    font-weight: 250;
}

.hero-text-content,
.hero-img img,
.footer-content {
  opacity: 0;
}

@keyframes fadeInUp {
  from {
    opacity: 0;
    transform: translateY(20px);
  }
  to {
    opacity: 1;
    transform: translateY(0);
  }
}

footer{
    background-color: rgb(0, 25 , 55);
    color: white;
    display: flex;
    align-items: center;
    justify-content: center;
}

.footer-content{
    display: flex;
    justify-content: space-evenly;
    animation: fadeInUp 1s ease forwards;
    animation-delay: 0.4s;
    margin: 2vh;
    border-bottom: 1px solid white;
    width: 80%;
}

.footer-content div{
    display: flex;
    width: 50%;
    justify-content: center;
    align-items: center;
}

.navbar{
    display: flex;
    width: 100%;
    height: 10vh;
    padding: 0%;
    gap: 5%;
    align-items: center;
    justify-content: center;
    background-color: rgb(250, 250, 250);
}

.navbar a{
    text-decoration: none;
    color: black;
    padding-bottom: 5px;
    position: relative;
}


.navbar a::after {
    content: "";
    position: absolute;
    left: 0;
    bottom: 0;
    height: 2px;
    width: 0;
    background-color: black;
    transition: width 0.3s ease;
}

.navbar a:hover::after {
    width: 100%;
}
.hero{
    display: flex;
    height: fit-content;
    flex: 1;
}

.hero-img{
    width: 50%;
}

.hero-img img{
    max-height: 90vh;
    max-width: 100%;
    animation: fadeInUp 1s ease forwards;
}

.hero-text{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 50%;
    background-color: aliceblue;
}

.hero-text-content{
    display: flex;
    flex-direction: column;
    width: 80%;
    justify-content: space-between;
    animation: fadeInUp 1s ease forwards;
    animation-delay: 0.3s;
    padding: 2%;
}

.hero-text-content h1{
    font-size: 5vw;
    padding: 0%;
    margin: 0%;
}

.hero-text-content h2{
    font-size: 1.5vw;
}

.btn-wrapper{
    height: max-content;
    width: max-content;
}

.platform-btn{
    color: white;
    background-color: rgb(0, 70, 160);
    border: none;
    outline: auto;
    cursor: pointer;
    height: 100px;
    width: 200px;
    font-size: 150%;
    transition: ease 0.2s;
}

.platform-btn:hover{
    background-color: rgb(0, 55, 130);
    scale: 0.99;
}

.logo img{
    max-width: 75px;
}

.links{
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
}

.content h1{
    font-size: 6vh;
    margin-top: 5vh;
}

.subcontent{
    width: 90%;
    display: flex;
    justify-content: space-evenly;
    flex-wrap: wrap;
}

.tile{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 2vh;
    padding: 2vh;
    max-width: 35%;
    height: fit-content;
    background-color: aliceblue;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    transition: ease 0.3s;
}

.tile p{
    font-size: 2.5vh;
}

.tile h1{
    font-size: 5vh;
}

#about-content{
    display: flex;
    flex-direction: row;
}

#about-content img{
    max-width: 40%;
    margin: 2%;
    border-radius: 10px;
}

#about-content h1{
    display: flex;
    justify-content: center;
}

#about-text{
    display: flex;
    flex-direction: column;
    width: 60%;
    text-align: left;
    font-size: 2.5vh;
}

#about-text p{
    font-size: 1.2em;
}

#about-text h1{
    font-size: 3.5vw;
}

.signature{
    font-family: 'Style Script', cursive;
    font-size: 3em !important;
    justify-self: center;
}

#event-content{
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.event-tile {
    max-width: 30% !important;
}

.event-tile img{
    max-width: 100%;

}

.calendar-links{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 2vw;
    margin-top: 2vh;
}

.event-tile:hover{
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
    transform: translateY(-5px);
}

.blog-list{
    display: flex;
    justify-content: center;
    gap: 3vh;
    margin: 5vh;
}

.blog-list .tile{
    width: fit-content;
}

.blog-list a{
    text-decoration: none;
    color: black;
}

.blog-list .tile:hover{
    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
    transform: translateY(-5px);
}

#blog-foot{
    position: absolute;
    bottom: 0;
}

.blog-post{
    width: 60%;
    margin: 5vh;
    font-size: 1.2em;
    text-align: left;
    flex-direction: column;
    border: 1px solid rgba(0, 0, 0, 0.15);
    padding: 2%;

}

@media (max-width: 1024px) {
    .hero-text-content h2{
        font-size: 2vh;
    }
}

@media (max-width: 768px){
    #event-content{
        flex-direction: column;
        transition: ease 0.3s;
    }

    .event-tile {
        max-width: 80% !important;
    }
}

@media (max-width: 650px) {
    .hero{
        height: fit-content;
        flex-direction: column;
    }

    .hero-img, .hero-img img{
        width: 100%;
    }

    .hero-text{
        width: 100%;
        height: fit-content;
    }

    .hero-text h1{
        font-size: 10vw;
    }

    .hero-text-content{
        height: auto;
    }

    .hero-text-content h2{
        font-size: 5vw;
    }

    .footer-content{
        flex-direction: column;
        border-bottom: 2px solid white;
    }

    .footer-content div {
        width: 100%;
    }

    .footer-text{
        border-bottom: 1px solid white;
    }
    .tile{
        max-width: 80%;
        transition: ease 0.3s;
    }

    .links{
        flex-direction: column;
        align-items: center;
        gap: 5vh;
    }

    #about-content{
        flex-direction: column;
        align-items: center;
    }
    #about-content img{
        max-width: 80%;
    }

    #about-text h1{
        font-size: 6vh;
    }


}

